# flowsurface

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.claude/: file-size-guard.json
.claude/commands/: flowsurface-launch.md
.github/workflows/: format.yml  lint.yml  release.yaml
.mise/tasks/: dev.toml  infra.toml  release.toml  upstream.toml
.planning/: CRYPTO-DATA-INVENTORY-2026-05-01.md  HANDOFF-FXVIEW-FOREX-DEFAULTS.md  HANDOFF-FXVIEW-FOREX-PIPELINE.md  HANDOFF-OPENDEVIATIONBAR-PY-CRYPTO-DATA-LACUNA.md  HANDOFF-TO-MQL5-EURUSD-GAP-20260415.md  HANDOFF-TO-MQL5-LIVE-TICK-STREAM.md  HANDOFF-TO-MQL5-SELF-HEALING-PRIMITIVES.md  PROJECT.md  REPLY-FROM-MQL5-SSE-LIVE-ENDPOINT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-config-centralization/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/milestones/v1.0-phases/02-must-use-safety-net/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md
.planning/milestones/v1.0-phases/03-bool-to-enum-cleanup/: 03-01-SUMMARY.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/milestones/v1.0-phases/04-pane-content-extraction/: 04-01-PLAN.md  04-RESEARCH.md  04-VALIDATION.md
.planning/milestones/v1.0-phases/05-pane-stream-setup-extraction/: 05-01-PLAN.md  05-CONTEXT.md  05-RESEARCH.md
.planning/milestones/v1.0-phases/06-kline-data-ops-extraction/: 06-RESEARCH.md  06-VALIDATION.md
.planning/milestones/v1.0-phases/08-indicator-ceremony-reduction/: 08-01-SUMMARY.md  08-CONTEXT.md  08-VALIDATION.md
.planning/phases/01-config-centralization/: 01-01-PLAN.md  01-02-PLAN.md
.planning/phases/02-must-use-safety-net/: 02-VERIFICATION.md
.planning/phases/03-bool-to-enum-cleanup/: 03-01-PLAN.md  03-CONTEXT.md  03-RESEARCH.md
.planning/phases/04-pane-content-extraction/: 04-01-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-pane-stream-setup-extraction/: 05-01-SUMMARY.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-kline-data-ops-extraction/: 06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md  06-VERIFICATION.md
.planning/phases/07-kline-odb-lifecycle-extraction/: 07-01-PLAN.md  07-01-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-indicator-ceremony-reduction/: 08-01-PLAN.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: flowsurface.icns  generate_icon.py
assets/fonts/: fontello.json
data/: CLAUDE.md  Cargo.toml
data/src/: aggr.rs  anomaly.rs  chart.rs  conditional_ema.rs  lib.rs  telemetry.rs  tickers_table.rs  util.rs
data/src/aggr/: ticks.rs  time.rs
data/src/chart/: heatmap.rs  indicator.rs  kline.rs
data/src/config/: sidebar.rs  timezone.rs
data/src/layout/: pane.rs
data/src/panel/: ladder.rs  timeandsales.rs
docs/indicators/: selection-intensity-metrics.md
exchange/: CLAUDE.md  Cargo.toml
exchange/src/: adapter.rs  config.rs  connect.rs  depth.rs  error.rs  fetcher.rs  health.rs  lib.rs  limiter.rs  proxy.rs  resilience.rs  serde_util.rs  telegram.rs  unit.rs
exchange/src/adapter/: binance.rs  bybit.rs  clickhouse.rs  hub.rs  hyperliquid.rs  mexc.rs  okex.rs
exchange/src/adapter/hub/: binance.rs  bybit.rs  hyperliquid.rs  mexc.rs  okex.rs
exchange/src/adapter/hub/binance/: fetch.rs  stream.rs
exchange/src/adapter/hub/bybit/: fetch.rs  stream.rs
exchange/src/adapter/hub/hyperliquid/: fetch.rs  stream.rs
exchange/src/adapter/hub/mexc/: fetch.rs  stream.rs
exchange/src/adapter/hub/okex/: fetch.rs  stream.rs
exchange/src/unit/: price.rs  qty.rs
exchange/tests/: gap_fill_integration.rs
scripts/telemetry/: gap_fill_validation.sh
src/: audio.rs  chart.rs  layout.rs  logger.rs  main.rs  notify.rs  style.rs  version.rs  widget_window.rs
src/chart/: CLAUDE.md  comparison.rs  heatmap.rs  indicator.rs  interaction.rs  keyboard_nav.rs  kline.rs  legend.rs  scale.rs  view_state.rs
src/chart/indicator/: kline.rs  plot.rs
src/chart/indicator/kline/: delta.rs  duration.rs  liquidation_cascade.rs  ofi.rs  ofi_cumulative_ema.rs  open_interest.rs  rsi.rs  spread.rs  trade_count.rs  trade_intensity.rs  trade_intensity_heatmap.rs  turnover_imbalance.rs  volume.rs  vwap.rs  vwap_close_deviation.rs  zigzag.rs
src/chart/indicator/plot/: bar.rs  bar_with_ema_overlay.rs  line.rs
src/chart/kline/: bar_selection.rs  crosshair.rs  data_ops.rs  mod.rs  odb_core.rs  odb_lifecycle.rs  rendering.rs
src/chart/scale/: linear.rs  timeseries.rs
src/connector/: fetcher.rs
src/modal/pane/: mini_tickers_list.rs  settings.rs  stream.rs
src/screen/: dashboard.rs
src/screen/dashboard/: pane.rs  panel.rs  sidebar.rs  tickers_table.rs
src/screen/dashboard/pane/: content.rs  mod.rs  stream_setup.rs
src/screen/dashboard/panel/: ladder.rs  timeandsales.rs
src/widget/: multi_split.rs  toast.rs
src/widget/chart/: comparison.rs
