[package]
name = "flowsurface"
version.workspace = true
readme = "README.md"
license = "GPL-3.0-or-later"
description = "A native desktop charting platform for crypto markets"
categories = ["finance", "visualization", "gui"]
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[workspace.package]
version = "0.8.8"
edition = "2024"
repository = "https://github.com/flowsurface-rs/flowsurface"
homepage = "https://flowsurface.com"

[workspace]
members = [ "data", "exchange"]

[workspace.dependencies]
iced_core = { version = "0.14.0", features = ["serde"] }
chrono = { version = "0.4.44", default-features = false, features = ["serde", "now", "clock"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
thiserror = "2.0.18"
regex = "1.12.3"
palette = "0.7.6"
num-traits = "0.2.19"
rustc-hash = "2.1.2"
enum-map = "2.7.3"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }
data = { version = "0.8.8", path = "data", package = "flowsurface-data" }
exchange = { version = "0.8.8", path = "exchange", package = "flowsurface-exchange" }

[dependencies]
iced = { version = "0.14.0", default-features = false, features = [
    "wgpu",
    "tokio",
    "canvas",
    "sipper",
    "advanced",
    "unconditional-rendering",
    "crisp",
    # x11/wayland intentionally omitted: Linux display backends, not needed on macOS
] }
iced_core.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
uuid.workspace = true
palette.workspace = true
num-traits.workspace = true
rustc-hash.workspace = true
enum-map.workspace = true
url.workspace = true
fern = "0.7.1"
tokio = { version = "1", default-features = false, features = ["rt"] }
rodio = { version = "0.20.1", default-features = false, features = [ "wav" ]}

exchange.workspace = true
data.workspace = true
kand = { version = "0.2", default-features = false, features = ["f64", "i32", "check"] }
qta = { path = "../../eon/mql5/crates/qta" }

[features]
debug = ["iced/hot"]
telemetry = ["data/telemetry"]

# ── Build profiles ────────────────────────────────────────────────────────────

[profile.release]
# incremental: only recompile changed codegen units — biggest win for iterative
# release builds. Without this, a 1-line change recompiles the entire crate.
incremental = true
# lto: keep disabled for incremental builds; thin LTO requires full crate
# analysis at each link which defeats incremental benefits.
lto = false

[profile.fast-release]
# Use for day-to-day iteration: 30-35% faster compile than release,
# ~2-5% slower runtime (acceptable for dev/testing).
inherits = "release"
opt-level = 2
# line-tables-only: panic backtraces work, no heavy DWARF generated
debug = "line-tables-only"
