[package]
name = "flowsurface-data"
description = "Data aggregation, indexing, and configuration utilities for Flowsurface"
version.workspace = true
license = "GPL-3.0-or-later"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
iced_core.workspace = true
chrono.workspace = true
regex.workspace = true
palette.workspace = true
enum-map.workspace = true
rustc-hash.workspace = true
url.workspace = true
dirs-next = "2.0.0"
open = "5.3.2"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
jiff = { version = "0.2", default-features = false, features = ["std", "tz-system", "tzdb-zoneinfo"] }
log = { version = "0.4.22", default-features = true, features = ["std"] }
thiserror = { version = "2.0.12", default-features = true, features = ["std"] }
kand = { version = "0.2", default-features = false, features = ["f64", "i32", "check"] }

exchange.workspace = true

[features]
telemetry = []
