[package]
name = "flowsurface-data"
description = "Data aggregation, indexing, and configuration utilities for Flowsurface"
version.workspace = true
license = "GPL-3.0-or-later"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
iced_core.workspace = true
chrono.workspace = true
regex.workspace = true
palette.workspace = true
enum-map.workspace = true
rustc-hash.workspace = true
url.workspace = true
dirs-next = "2.0.0"
open = "5.3.5"
jiff = { version = "0.2", default-features = false, features = ["std", "tz-system", "tzdb-zoneinfo"] }
log = { version = "0.4.29", default-features = false, features = ["std"] }
thiserror = { version = "2.0.18", default-features = false, features = ["std"] }
kand = { version = "0.2", default-features = false, features = ["f64", "i32", "check"] }

exchange.workspace = true

# Per-platform keyring backends — avoids pulling linux-native (libdbus) into
# macOS/Windows builds (ported from upstream 7e8e5c2)
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["linux-native"] }

[features]
telemetry = []
