[package]
name = "flowsurface-exchange"
description = "Adapters for data providers/crypto exchanges to work with Flowsurface"
version = "0.1.0"
license = "MIT"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
iced_futures.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
uuid.workspace = true
enum-map.workspace = true
rustc-hash.workspace = true
url.workspace = true

tokio = { version = "1.43", default-features = false, features = ["rt", "macros"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "brotli", "rustls-tls", "socks"] }
bytes = "1.8.0"
sonic-rs = { version = "0.5.0", default-features = false }
fastwebsockets = { version = "0.9.0", default-features = false, features = ["upgrade"] }
http-body-util = "0.1.2"
hyper = { version = "1", default-features = false, features = ["http1", "client"] }
hyper-util = { version = "0.1.10", default-features = false }
tokio-rustls = "0.24.1"
webpki-roots = "0.23.1"
zip = "2.3.0"
csv = "1.3.1"
smallvec = "1.15.1"
tokio-socks = "0.5.2"
base64 = "0.22.1"
rangebar-core = "12"
backon = "1.6"